<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_music_note"
        android:title="Search" />
    
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_library_music"
        android:title="@string/nav_library" />
    
    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/nav_downloads" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
    
</menu>
